--- a/filecopyreport.html
+++ b/filecopyreport.html
@@ -41,11 +41,11 @@
 <div class="student">
 <p>
 <span class="label">Student1 name: </span>
-YOUR-NAME-HERE
+Lulu Zheng
 <br>
 
 <span class="label">UTLN: </span>
-YOUR-UTLN-HERE
+wzheng05
 <br>
 
 <span class="label">E-mail: </span>
@@ -54,7 +54,7 @@ YOUR-UTLN-HERE
  <a href="mailto:lady.gaga@cs.tufts.edu">lady.gaga@cs.tufts.edu</a>
 --> 
 
-<a href="mailto:YOUR-EMAIL-HERE">YOUR-EMAIL-HERE</a>
+<a href="mailto:lulu.zheng@tufts.edu">lulu.zheng@tufts.edu</a>
 <br>
 <br>
 <br>
@@ -137,7 +137,7 @@ N/A
 
 <li class="q">Did you get help from anyone other than your teammate? If "yes", then briefly explain who helped you and how.</li>
 <li class="a">
-TA Mert
+We'd like to give a pecial shoutout to TA Mert as he has been very helpful :) 
 </li>
 
 
@@ -183,7 +183,7 @@ TA Mert
 
 <h3>Protocol</h3>
 <p>
-     very transmission, we attempt to send all packets in order from the client side. After the initial round of transmissions is over, the server will ask the client for specific files 
+     For every file transmission, we attempt to send all packets in order from the client side. After the initial round of transmissions is over, the server will ask the client for specific files 
      that the server has not received yet. The server stores all packets in a hashtable that maps packetIDs to corresponding packet content. Thus, it is okay for packets to arrive out of order.
 </p>
 
@@ -193,8 +193,10 @@ TA Mert
           <li>BEG/[filename]/[num_packets]/[SHA1checksum] - packet sent from client at the beginning of a file transmission that includes filename and number of packets contained in the file</li>
           <li>END/ - packet sent from client to server indicating the end of current round of transmissions (initial round of all packets or round of specific resends)</li>
           <li>REQ/ - packet sent from server to client requesting retransmission of a specific packet </li>
-          <li>DON/ - packet sent from server to client indicating the end of current round of resend requests</li>
+          <li>DONE - packet sent from server to client indicating the end of current round of resend requests</li>
           <li>ALL/ - packet sent from server to client acknowledging that all packets of the current file have been received.</li>
+          <li>SUCC - packet sent from server to client telling </li>
+          <li>FAIL - packet sent from server to client </li>
           <li>PacketID [4 bytes] content[252 bytes] - packet sent from client to server that has the content of a packet and its ID</li>
      </ul>
 </p>
@@ -217,30 +219,33 @@ TA Mert
           to write the same packet again.
      </li><br/>
      <li>Are there bugs or shortcomings you know about? Are they indicated in comments in the code with NEEDSWORK?<br/><br/>
-          Our program is inefficient when there are missing files.
+          Our program is inefficient when there are missing packets. Although the server sends resend requests for all missing packets, we believe
+          the client cannot handle them fast enough, so the server sometimes ends up sending multiple resend requests for the same packet. When the
+          number of resend request reaces 70, 
      </li><br/>
      <li>What should we look for in the grading logs?<br/><br/>
-          TBD
+          On the client side, we output "beginning transmission" to the grading logs when the client is about to begin sending the packets of a file. Once, the server recieves all
+          packets potentially after some re-transmissions, it will send an ALL/ packet. When the client receives that packet, we output " transmission complete" to the logs. Now,
+          the server compares the SHA1hash of the copied file against the SHA1checksum sent by the client, and if they match, it will return "succ" and the we log 
+          "end-to-end check succeeded" to the logs along with the attempt number. Otherwise, we log "end-to-end check failed" and the attempt number.
      </li><br/>
      <li>Which cases are you aware of (e.g. high nastiness levels or particular combinations of reordering) that you aren't trying to handle correctly? In such cases, 
           will your code detect the problem and abort (OK) or will it silently produce incorrect results?<br/><br/>
-          Our program handles all leves of file nastiness and network nastiness.
+          Our program handles all levels of file nastiness and network nastiness.
      </li><br/>
      <li>Are there any cases for which your code doesn't do what you expect? Do you have any intuition why that might be?<br/><br/>
           N/A
      </li><br/>
      <li>If your code has to give up copying one file, will it go on and try others?<br/><br/>
           If the end-to-end check for a file fails, the client will keep sending the file to the server until it succeeds. 
-     </li>
-     <li>What should we look for in the grading logs?<br/><br/>
-          TBD
-     </li>
+     </li><br/>
 </ul>
 
 <h3>Learning</h3>
 Naoki: While this system is a relatively simple on in the grand scheme of things, there were quite a few design decisions that we had to make. Even without nastiness, we had to think
 about how to best efficiently store and access the data of a file temporary on the client and server. We also had to decide on how to format the packets that are sent from the client 
 to the server. Furthermore, having successful filecopy at file nastiness, network nastiness above 0 required a lot more thinking.
+Lulu: I learned that thinking about design decisions is difficult and making them is even harder. In this assignment, we had to think about them from both the server and client's perspective, and often, the first choice that we went with did not work very well. Finding a working solution to handle network nastiness that is both elegant and fast was more difficult than I had thought, but I learned a lot about implementing idempotent functions! :)   
 </div>
 </div>
 </body>
